@@ -3,7 +3,7 @@
 .\" This file may be copied under the terms of the GNU Public License.
 .\" Adapted from e2fsprogs-1.19/misc/mke2fs.8.in by Theodore Ts'o.
 .\"
-.TH MKNTFS 8 "March 2002" "ntfsprogs version @VERSION@"
+.TH MKNTFS 8 "June 2005" "ntfsprogs version @VERSION@"
 .SH NAME
 mkntfs \- create a NTFS 1.2 (Windows NT/2000/XP) file system
 .SH SYNOPSIS
@@ -58,6 +58,9 @@ mkntfs \- create a NTFS 1.2 (Windows NT/2000/XP) file system
 ]
 [
 .B \-F
+]
+[
+.B \-T
 ]
 [
 .B \-I
@@ -212,6 +215,10 @@ Force
 to run, even if the specified
 .I device
 is not a block special device, or appears to be mounted.
+.TP
+.B \-T
+Fake the time to be 00:00:00 UTC, Jan 1, 1970 instead of the current system
+time.  This is only really useful for debugging purposes.
 .TP
 .B \-I
 Disable content indexing on the volume. (This is only meaningful on
