@@ -144,8 +144,10 @@ xx/xx/2005 - 2.0.0-WIP
 	  permissions that got lost during the move.  (Anton)
 	- ntfsresize: fix segfault during filesystem check if NTFS $Bitmap file
 	  size was larger than it should have been.  (Szaka)
-	- mkntfs: don't mark NTFS dirty if the backup boot sector could be
-	  successfully created (Szaka)
+	- mkntfs: Don't mark NTFS dirty if the backup boot sector could be
+	  successfully created.  (Szaka)
+	- mkntfs: Add new option -T which fakes the time to be 00:00:00 UTC,
+	  Jan 1, 1970 instead of the current system time.
 
 04/09/2004 - 1.9.4 - Urgent bug fixes.
 
